# used-car-dynamic-pricing

./: .docker-verify.txt  .dockerignore  .env.example  .flake8  .gitignore  API_README.md  CARDEKHO_V5_FRONTEND_MIGRATION.md  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  Dockerfile.frontend  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker-healthcheck.sh  dvc.yaml  feature_importance.csv  params.yaml  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: ci.yaml
data/processed/: processed_cars.csv.dvc
data/raw/: car_web_scraped_dataset.csv.dvc
metrics/: scores.json
models/: model.pkl  preprocessor.pkl
notebooks/: 1.0-eda-initial-exploration.ipynb  2.0-experiment-tracking.ipynb
src/app/: __init__.py  api.py  schemas.py
src/data/: process_data.py
src/features/: build_features.py  build_features_v4.py
src/frontend/: app.py  app_polished.py  app_v5_polished.py
src/models/: train_model.py
tests/: conftest.py  test_api.py  test_process_data.py
