[tool.black]
# Black configuration for code formatting
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | _build
  | buck-out
  | build
  | dist
  | mlruns
  | \.dvc
  | \.eggs
  | \.pytest_cache
)/
'''

[tool.isort]
# isort configuration for import sorting
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*"]
known_first_party = ["used-car-dynamic-pricing"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
# pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
# Coverage configuration
source = ["used-car-dynamic-pricing"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/__main__.py",
    "*/setup.py",
]

[tool.coverage.report]
# Coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*@abstractmethod",
    "^\\s*@abstractproperty",
]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "used-car-dynamic-pricing"
version = "0.1.0"
description = "MLOps project for dynamic used car pricing prediction"
requires-python = ">=3.9"
